# templatepp

./: .devcontainer.json  .gitignore  CHANGELOG.md  CMakeLists.txt  CTest.cpp  LICENSE.md  README.md  cmake-install.ps1  cmake-pack.ps1  gh-release-tag.ps1  main-test.cpp  osv-scanner.json  test.cpp  wrun.cmake
.github/workflows/: cmake.yml  codeql.yml  main.yml
include/: library.hpp
include/CppTemplate/: CppTemplate.hpp
include/thezhe/: cpp_template.hpp  templatepp.hpp
include/thezhe/cpp_template/: Example.hpp
include/thezhe/cpp_template/detail/: Detail.hpp
include/thezhe/templatepp/: Example.hpp  Templatepp.hpp
include/thezhe/templatepp/detail/: Detail.hpp  DetailExample.hpp
include/thezhe/templatepps/: Templatepp.hpp
src/: App.cpp  Templatepp.cpp  main.cpp
src/CppTemplate/: CppTemplate.cpp
src/thezhe/templatepp/: Templatepp.cpp
test/: Templatepp.cpp  templatepp.cpp
test/CppTemplate/: CppTemplateTest.cpp
test/thezhe/: templatepp.cpp
